# gilat-hw

./: .env-example  .gitignore  Dockerfile  README.md  gilat-hw.postman_collection.json  indexing.py  main.py  pyproject.toml
